2021-04-23  Omar Sandoval  <osandov@fb.com>

	* dwarf_child.c (__libdw_find_attr): Handle DW_FORM_indirect.
	* dwarf_getattrs.c (dwarf_getattrs): Handle DW_FORM_indirect.

2021-02-12  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (attr_ok): For DWARF version 4 or higher
	block forms are not expression locations.
	(is_constant_offset): DW_FORM_implicit_const is also a constant.

2020-12-20  Dmitry V. Levin  <ldv@altlinux.org>

	* .gitignore: New file.

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* libdwP.h (_): Remove.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* dwarf.h: Fix spelling typo in comment.
	* dwarf_begin_elf.c (dwarf_begin_elf): Likewise.
	* dwarf_getlocation.c (attr_ok, __libdw_intern_expression): Likewise.
	* dwarf_getsrclines.c (read_srclines): Likewise.
	* libdw.h: Fix spelling typos in comments.
	* libdwP.h: Likewise.

2020-12-09  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (noinst_PROGRAMS): Rename to noinst_DATA.
	(libdw_so_SOURCES): Remove.
	(MOSTLYCLEANFILES): Add libdw.so.

2020-11-30  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (libdw.so$(EXEEXT)): Drop $(EXEEXT) suffix.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>

	* Makefile.am (libdw_so_LDLIBS): Add fts_LIBS.

2020-10-28  Tom Tromey  <tom@tromey.com>

	PR26773
	* dwarf_getlocation.c (store_implicit_value): Use
	__libdw_get_uleb128_unchecked.
	* memory-access.h (get_sleb128_step): Assume unsigned type for
	'var'.
	(__libdw_get_sleb128, __libdw_get_sleb128_unchecked): Work in
	unsigned type.  Handle final byte.

2020-10-19  Mark Wielaard  <mark@klomp.org>

	* dwarf_frame_register.c (dwarf_frame_register): Declare ops_mem
	as array of (at least) 3 elements.
	* libdw.h (dwarf_frame_register): Add extra explanation of ops_mem
	argument.

2020-10-23  Tom Tromey  <tom@tromey.com>

	* memory-access.h (read_3ubyte_unaligned_inc): Call
	read_3ubyte_unaligned.

2020-09-03  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_CFA_AARCH64_negate_ra_state.